# gauntlet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: canonical-agent-image.yml  publish.yml
agents/canonical/: .dockerignore  Dockerfile  README.md  agent.py  requirements.txt
agents/canonical/tests/: test_agent_loop.py  test_dockerfile_byoc.py  test_http.py  test_tools.py
docs/: demo.cast  m1.3-rampart-spike.md  m1.3.5-openshell-binding-spike.md  m1.3.6-gateway-setup.md
docs/upstream-issues/: openshell-linux-wheel-missing-protos.md
lima/: openshell-gateway.yaml
policy/: canonical-agent.yaml
scripts/lima/: gateway-up.sh  install-gauntlet-venv.sh  install-openshell-from-fork.sh
src/gauntlet/: __init__.py  _openshell_mtls.py  _sanitizer.py  assurance.py  cli.py  direct_runner.py  policy_loader.py  report.py  sandbox.py  seam.py
src/gauntlet/rampart_suite/: conftest.py  test_xpia_send_email.py
tests/: test_assurance.py  test_cli.py  test_direct_runner.py  test_integration_seam.py  test_policy_loader.py  test_rampart_assurance.py  test_report.py  test_sandbox.py  test_seam.py
tests/integration/: test_openshell_real.py  test_rampart_real.py
