[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauntlet"
version = "0.1.0"
description = "The seam artifact: RAMPART assurance executed against an agent running inside OpenShell isolation — one command"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Murali Raju", email = "murali.raju@appliv.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
integration = [
    # Install when running against real RAMPART + OpenShell:
    #   pip install -e ".[integration]"
    # Both projects are alpha-stage; pinned to compatible-with-minor.
    "rampart>=0.1.0,<0.2",       # https://github.com/microsoft/RAMPART  (MIT) — only 0.1.0 on PyPI as of 2026-05-24
    "pytest-json-report>=1.5",   # used by RampartAssurance to parse pytest output
    "requests>=2.31",             # used by the rampart_suite agent_adapter fixture
    "openshell>=0.0.46",          # https://github.com/NVIDIA/OpenShell   (Apache-2.0) — M1.4
]

[project.scripts]
gauntlet = "gauntlet.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "agents", "src/gauntlet/rampart_suite"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: requires RAMPART and OpenShell installed; skips when absent",
    "harm: RAMPART harm category marker (xpia, tool-misuse, etc.)",
    "byoc: BYOC-compatibility smoke against the canonical-agent Docker image; requires Docker + image present",
]
